add fix đến kết luận của bác sĩ